--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,8 @@
 .gradle
 /local.properties
 /keystore.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
+/.idea
 /build
 /captures
 /keystore
